<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMusician"
        android:layout_marginTop="10dp"
        android:layout_width="365dp"
        android:layout_height="130dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardPreventCornerOverlap="true"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:gravity="center_vertical"
                android:text="Nombre del Artista"
                android:textColor="#31C5D2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="Nombre del Artista"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginTop="5sp"
                />

            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="Nombre del Artista"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>