<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/coleccionistas"
        android:id="@+id/collections"
        android:icon="@drawable/collections_icon"
        />

    <item android:title="@string/artistas"
        android:id="@+id/artists"
        android:icon="@drawable/artists_icon"/>
...
