...
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCollectors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@string/colecciones"
        tools:layout_editor_absoluteX="53dp"
...
