...
            />

        <TextView
            android:id="@+id/genderAlbumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salsa"
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />

...
